# esphome-config

./: .gitallowed  .gitignore  .gitsecrets  .markdownlint.json  .mise.toml  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  CREDENTIAL_DEPLOYMENT_FINAL_STATUS.md  CREDENTIAL_DEPLOYMENT_STATUS.md  CREDENTIAL_ROTATION_GUIDE.md  CREDENTIAL_ROTATION_WALKTHROUGH.md  ESP01_PHYSICAL_RECOVERY_GUIDE.md  ESP01_RECOVERY_PLAN.md  ESP01_RECOVERY_WORKFLOW.md  MIGRATION_GUIDE.md  PRE_COMMIT_MISE_FIX.md  PYTHON_SECURITY_MIGRATION.md  README.md  SECURITY.md  SECURITY_FRAMEWORK.md  Taskfile.yml  attic_sensor-full.yaml  attic_sensor-minimal.yaml  attic_sensor.yaml  bedroom-east-heatpump.yaml  bedroom-west-heatpump.yaml  bedroom_east_heatpump-full.yaml  bedroom_east_heatpump-minimal.yaml  bedroom_east_heatpump.yaml  bedroom_east_multisensor.yaml  bedroom_west_heatpump-full.yaml  bedroom_west_heatpump-minimal.yaml  bedroom_west_heatpump-recovery.yaml  bedroom_west_heatpump.yaml  den_audio_led.yaml  den_multisensor.yaml  denheatpump-full.yaml  denheatpump-minimal.yaml  denheatpump-recovery.yaml  (+39 more)
.githooks/: esphome-credential-check.sh  esphome_credential_check.py  git-secrets-scan.sh  git_secrets_scan.py  mise-python-wrapper.sh  python-wrapper.sh
archive/: display.yaml
common/: bluetooth-proxy.yaml  d1mini.yaml  device_base.yaml  doorbell.yaml  esp01.yaml  feit_outlet.yaml  heatpump-climate.yaml  heatpump-esp01.yaml  heatpump-esp32-nanoc6.yaml  heatpump-fanspeeds.yaml  ipv6.yaml  nodemcuv2.yaml  ota_stage.yaml  outlet-topgreener.yaml  packages-full.yaml  packages-minimal.yaml  (+14 more)
(+75 files in other folders)
