[project]
name = "esphome-config"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # See https://github.com/echavet/MitsubishiCN105ESPHome/issues/396
    # https://github.com/echavet/MitsubishiCN105ESPHome/issues/378#issuecomment-3347999263
    "esphome==2025.7.5",
]
